--- a/index.html
+++ b/index.html
@@ -91,24 +91,23 @@
                         <h4 class="foodSubTitle">
                             Food & Desert Highlights 
                         </h4>
-                        <p>
-                            Asian steamed bao stuffed with chilli chicken or lamb Kebab.<span class="bulletInline">•</span>
-                            Cajun shrimp tacos and chicken Burritos.<span class="bulletInline">•</span>
-                            Gourmet cheeseburgers, grilled chicken and steak sandwiches. <span class="bulletInline">•</span> 
-                            Shawarma gyros and falafel salads. <span class="bulletInline">•</span>
-                            Mouth watering beavertails. <span class="bulletInline">•</span>
-                            Soft serve ice cream & Popsicles. <span class="bulletInline">•</span>
-                            Hotdogs. 
-                        </p>
+                        <ul class="foodHighlightList">
+                            <li class="foodHighlightListItem">Asian steamed bao stuffed with chilli chicken or lamb Kebab.</li>
+                            <li class="foodHighlightListItem">Cajun shrimp tacos and chicken Burritos.</li>
+                            <li class="foodHighlightListItem">Gourmet cheeseburgers, grilled chicken and steak sandwiches.</li>
+                            <li class="foodHighlightListItem">Shawarma gyros and falafel salads.</li>
+                            <li class="foodHighlightListItem">Mouth watering beavertails.</li>
+                            <li class="foodHighlightListItem">Soft serve ice cream & Popsicles.</li>
+                        </ul>
                         <h4 class="foodSubtitle">
                             Drink Highlights
                         </h4>
-                        <p>
-                            Great beers for the lads <span class="bulletInline">•</span>
-                            Vodka, Tequila, Rum & Whisky - The usual <span class="bulletInline">•</span>
-                            New mixed drinks (grapefruit & berry smash) <span class="bulletInline">•</span>
-                            Free samples 
-                        </p>                 
+                        <ul class="foodHighlightList">
+                            <li class="foodHighlightListItem">Great beers for the lads.</li>
+                            <li class="foodHighlightListItem">Vodka, Tequila, Rum & Whisky - The usual.</li>
+                            <li class="foodHighlightListItem">New mixed drinks (grapefruit & berry smash)</li>
+                            <li class="foodHighlightListItem">Free samples.</li>
+                        </ul>               
                 </div>
             </div>
         </div>
@@ -119,17 +118,16 @@
                     <img src="assets/funStuff.png" alt="" class="title">
                     <div class="description">
                         <p>There's no such thing as too much fun,</p>
-                        <p>Get hyped for:</p>
-                        <p>
-                            A turfed beer garden (cups and balls provided)<span class="bulletInline">•</span> 
-                            Inflatables - lets bounce<span class="bulletInline">•</span> Free Caricature drawings<span class="bulletInline">•</span>
-                            Ball pit?<span class="bulletInline">•</span>
-                            Polaroid station<span class="bulletInline">•</span> 
-                            Giveaways 
-                            & more to come. 
-                        </p>
-
-                            
+                        <h4 class="foodSubtitle">
+                            Get Hyped For:
+                        </h4>
+                        <ul class="foodHighlightList">
+                            <li class="foodHighlightListItem">A turfed beer garden (cups and balls provided).</li>
+                            <li class="foodHighlightListItem">Inflatables - lets bounce.</li>
+                            <li class="foodHighlightListItem">Free Caricature drawings.</li>
+                            <li class="foodHighlightListItem">Ball pit.</li>
+                            <li class="foodHighlightListItem">Giveaways & more to come.</li>
+                        </ul>                          
                     </div>
                 </div>
             </div>
@@ -144,9 +142,15 @@
                         <img src="assets/waves.png" alt="" class="headlinerDJ">
                     </div>
                     <div class="innerSupporting">
-                        <img src="assets/crooked.png" alt="" class="supportingDJ">
-                        <img src="assets/mers.png" alt="" class="supportingDJ">
-                        <img src="assets/liamKeery.png" alt="" class="supportingDJ">
+                        <div class="supportingDJWrapper">
+                            <img src="assets/crooked.png" alt="" class="supportingDJ">
+                        </div>
+                        <div class="supportingDJWrapper">
+                            <img src="assets/mers.png" alt="" class="supportingDJ">
+                        </div>
+                        <div class="supportingDJWrapper">
+                            <img src="assets/liamKeery.png" alt="" class="supportingDJ">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -162,6 +166,5 @@
             </div>
     </section>
     <script src="scripts/app.js"></script>
-    <!-- <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script> -->
 </body>
 </html>
