added ne sponsor logo

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section class="thanksTo" id="seventh">
         <div class="wrapper sectionWrapper">
             <div class="innerTitleDescriptionWrapper">
-                <img src="assets/tickets.png" alt="" class="title">
+                <img src="assets/sponsors.png" alt="" class="title">
             </div>
             <div class="sponsorContainer">
                 <ul class="sponsorList">
